--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
    <div class="cont">
-    <svg id="polygon"></svg>
+    <svg id="phy"></svg>
+    <svg id="men"></svg>
    </div>
    <script src="func.js"></script> 
    <script src="statHan.js"></script> 
