added data folder

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
    </div>
    <script src="func.js"></script> 
    <script src="statHan.js"></script> 
-   <!-- <script src="script.js"></script>  -->
+   <script src="script.js"></script> 
 </body>
 </html>
