--- a/statIn.html
+++ b/statIn.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="formCont">
-        
+
     </div>
+    <script src="func.js"></script>
+    <script src="script.js"></script>
+    <script src="statIn.js"></script>
 </body>
 </html>
