--- a/statIn.html
+++ b/statIn.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stat Input</title>
-</head>
-<body>
-    <div class="formCont">
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
+  <body>
+    <div class="cont">
+      <div class="stArea">
+        <div class="work">
+          <span>Title</span>
+          <span>maxm</span><br />
+          <span>include Set</span>
+          <span>Progress</span>
+        </div>
+      </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.min.js"
+      integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+      crossorigin="anonymous"
+    ></script>
     <script src="func.js"></script>
     <script src="script.js"></script>
     <script src="statIn.js"></script>
-</body>
+  </body>
 </html>
